@@ -472,7 +472,7 @@ public class FileUploadUtils {
                   }
                 })
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
 
     final List<String> unitList =
         multiMap.entries().stream()
@@ -487,7 +487,7 @@ public class FileUploadUtils {
                   }
                 })
             .filter(Objects::nonNull)
-            .collect(Collectors.toList()); // handle units
+            .toList(); // handle units
 
     final AtomicInteger i = new AtomicInteger(0);
 
